objects/SOW__c.object
<CustomObject>
    <description>Scope Of Work. Used for Biopharma accounts</description>
    <fields>
        <fullName>AM_New_Study_Specifications__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AM New Study Specifications Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AM_Owner__c</fullName>
        <formula>Sponsor_Account__r.AM_Owner__r.FirstName +&quot; &quot;+Sponsor_Account__r.AM_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AM_Owner_s_Email__c</fullName>
        <formula>Sponsor_Account__r.AM_Owner__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AM Owner&apos;s Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Code__c</fullName>
        <formula>Sponsor_Account__r.Account_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sponsor Account&apos;s Account Code</inlineHelpText>
        <label>Account Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Analysis_Fees__c</fullName>
        <label>Additional Analysis Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AmendmentID__c</fullName>
        <description>Hidden field used to store record ID of amendment</description>
        <label>AmendmentID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amendment_No__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Hidden field used to increment amendment numbers</description>
        <label>Amendment No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apr_2020__c</fullName>
        <label>Apr 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assay_Type__c</fullName>
        <label>Regulatory Classification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RUO</fullName>
                </value>
                <value>
                    <fullName>IUO-NSR</fullName>
                </value>
                <value>
                    <fullName>IUO-SR</fullName>
                </value>
                <value>
                    <fullName>IUO-IDE Exempt</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>CDx</fullName>
                    <isActive>false</isActive>
                    <label>CDx</label>
                </value>
                <value>
                    <fullName>CLIA</fullName>
                    <isActive>false</isActive>
                    <label>CLIA</label>
                </value>
                <value>
                    <fullName>IDE</fullName>
                    <isActive>false</isActive>
                    <label>IDE</label>
                </value>
                <value>
                    <fullName>IUO</fullName>
                    <isActive>false</isActive>
                    <label>IUO</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Audit_Requirement__c</fullName>
        <label>Audit Requirement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BD_Owner__c</fullName>
        <formula>Sponsor_Account__r.BD_Owner__r.FirstName+ &quot; &quot;+Sponsor_Account__r.BD_Owner__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BD Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BI_Owner__c</fullName>
        <formula>Text(Sponsor_Account__r.BI_Owner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BI Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Base_Case_Current_Q__c</fullName>
        <inlineHelpText>Probability, in percentage</inlineHelpText>
        <label>Base Case-Current Q</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Base_Case_Future_Qs__c</fullName>
        <inlineHelpText>Probability in Percentage</inlineHelpText>
        <label>Base Case-Future Qs</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Box_Data_Transfer_Folder__c</fullName>
        <label>Box Data Transfer Folder</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Location__c</fullName>
        <label>Box Folder</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Approval__c</fullName>
        <label>Budget Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CD_Owner__c</fullName>
        <formula>TEXT(Sponsor_Account__r.CD_Owner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Derived from the Sponsor Account</inlineHelpText>
        <label>CD Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CDx_Opportunity__c</fullName>
        <label>CDx Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>o</fullName>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_SOW_Contact_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client SOW Contact 1</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact from the Sponsor Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Sponsor_Account__c</valueField>
            </filterItems>
            <infoMessage>Contacts from the Sponsor Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOWs</relationshipLabel>
        <relationshipName>SOWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_SOW_Contact_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client SOW Contact 2</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact from the Sponsor Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Sponsor_Account__c</valueField>
            </filterItems>
            <infoMessage>Contacts from the Sponsor Account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOWs (Client SOW Contact 2)</relationshipLabel>
        <relationshipName>SOWs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_SOW_Contact_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client SOW Contact 3</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select a contact from the Sponsor Account.</errorMessage>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Sponsor_Account__c</valueField>
            </filterItems>
            <infoMessage>Contacts from the Sponsor Account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SOWs (Client SOW Contact 3)</relationshipLabel>
        <relationshipName>SOWs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Competition_Involved__c</fullName>
        <label>Competition Involved</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contracted_Samples_Remaining__c</fullName>
        <formula>Total_Number_of_Samples_Incl_Amendments__c-Number_of_Samples_Received_SOW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Number of Samples (Including Amendments) - Total Number of Samples Received</inlineHelpText>
        <label>Contracted Samples Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contracted_Samples_from_Amendments__c</fullName>
        <label>Contracted Samples from Amendments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_Amendments__c</fullName>
        <label>Count Amendments</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_LIMS_Support_notified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked when DL-LIMS-Support is notified of new request. Field is hidden in order to prevent duplicate requests.</description>
        <label>DL-LIMS-Support notified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Transfer_Specifications__c</fullName>
        <label>Data Transfer Specifications</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Guardant</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Report_Type__c</fullName>
        <label>Delivery Report Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Fax</fullName>
                </value>
                <value>
                    <fullName>Fax &amp; Portal</fullName>
                </value>
                <value>
                    <fullName>Portal</fullName>
                </value>
                <value>
                    <fullName>Courier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Don_t_Update_Batch_Names__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, changes to the SOW&apos;s Account Code, Product Name, or SOW # will not trigger changes to all associated batches</inlineHelpText>
        <label>Don&apos;t Update Batch Names</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Drug__c</fullName>
        <label>Drug</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executed_SOW__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Executed SOW?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Cadence_of_Batches__c</fullName>
        <inlineHelpText>How often are we expecting to receive batches?</inlineHelpText>
        <label>Expected Cadence of Batches</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Batch</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Expected_SOW_Execution_Date__c</fullName>
        <label>Expected SOW Execution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_of_Batches__c</fullName>
        <label>Expected # of Batches</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2020__c</fullName>
        <label>Feb 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fields_Needed__c</fullName>
        <formula>TEXT(Product_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>**EDIT THE FIELD ABOVE** You cannot email to DL-LIMS-Support without information in all of these fields, as well as Sponsor Account and LIMS Project ID</inlineHelpText>
        <label>REQUIRED: Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Sample_In__c</fullName>
        <label>First Patient In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GH_Start_Date__c</fullName>
        <inlineHelpText>Expected first sample date</inlineHelpText>
        <label>Expected Date of First Sample</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gene_Panel_Version__c</fullName>
        <defaultValue>&quot;Default&quot;</defaultValue>
        <inlineHelpText>Unless a specific version is selected, samples will be processed under the current Gene Panel version at the time of accessioning</inlineHelpText>
        <label>Gene Panel Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
                <value>
                    <fullName>G360 2.10</fullName>
                </value>
                <value>
                    <fullName>G360 2.10.1</fullName>
                </value>
                <value>
                    <fullName>G360 2.11</fullName>
                </value>
                <value>
                    <fullName>OMNI 1.0</fullName>
                </value>
                <value>
                    <fullName>OMNI 2.0</fullName>
                </value>
                <value>
                    <fullName>LUNAR 1.0</fullName>
                </value>
                <value>
                    <fullName>LUNAR 1.2</fullName>
                </value>
                <value>
                    <fullName>LUNAR 1.3</fullName>
                </value>
                <value>
                    <fullName>LUNAR 2.0</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>IDE</fullName>
                    <isActive>false</isActive>
                    <label>IDE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Genes_of_Interest__c</fullName>
        <label>Genes of Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IDE_Pre_Sub__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IDE/Pre Sub</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IUO_Protocol_Version__c</fullName>
        <defaultValue>&apos;1&apos;</defaultValue>
        <label>IUO Protocol Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IUO_Reporting_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a LIMS Support User, I would like Salesforce to send within their emails, a line that includes whether IUO reporting is required.</description>
        <label>IUO Reporting Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indications__c</fullName>
        <label>Indications</label>
        <length>4096</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intake_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Intake Form?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jan_2020__c</fullName>
        <label>Jan 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jun_2020__c</fullName>
        <label>Jun 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDT_Reporting_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>As a LIMS Support User, I would like Salesforce to send within their emails, a line that includes whether LDT reporting is required.</description>
        <label>LDT Reporting Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Project ID #</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>$Source.Sponsor_Account__c</field>
                <operation>equals</operation>
                <valueField>LIMS_Project_ID__c.Sponsor_Account__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.Sponsor_Account__c</field>
                <operation>equals</operation>
                <valueField>LIMS_Project_ID__c.Sponsor_Account__r.ParentId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>LIMS_Project_ID__c</referenceTo>
        <relationshipLabel>SOWs</relationshipLabel>
        <relationshipName>SOWs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID_display__c</fullName>
        <formula>LIMS_Project_ID__r.LIMS_Project_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LIMS Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LIMS_Project_ID_text__c</fullName>
        <description>Deprecated in favor of lookup field</description>
        <inlineHelpText>To create a new LIMS Project ID, these fields must be filled out: Program, Program Type, Product Name, Needs Treatment {N-of-1}</inlineHelpText>
        <label>zzLIMS Project ID:</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lab_Type__c</fullName>
        <label>Lab Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CLIA</fullName>
                </value>
                <value>
                    <fullName>ResOps</fullName>
                </value>
                <value>
                    <fullName>ClinOps</fullName>
                    <isActive>false</isActive>
                    <label>ClinOps</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Sample_In__c</fullName>
        <label>Last Patient In</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Therapy__c</fullName>
        <label>Line of Therapy</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Refractory</fullName>
                </value>
                <value>
                    <fullName>Neo-adjuvent</fullName>
                </value>
                <value>
                    <fullName>Adjuvent</fullName>
                </value>
                <value>
                    <fullName>Recurrent</fullName>
                </value>
                <value>
                    <fullName>1st line</fullName>
                </value>
                <value>
                    <fullName>2nd line</fullName>
                </value>
                <value>
                    <fullName>2nd line+</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MA_Owner__c</fullName>
        <description>Sponsor_Account__r.MA_Owner_lookup__r.FirstName+ &quot; &quot;+Sponsor_Account__r.MA_Owner_lookup__r.LastName</description>
        <formula>Sponsor_Account__r.MA_Owner_lookup__r.FirstName+ &quot; &quot;+Sponsor_Account__r.MA_Owner_lookup__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MA Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mar_2020__c</fullName>
        <label>Mar 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2020__c</fullName>
        <label>May 2020</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_1__c</fullName>
        <inlineHelpText>Includes Month of Start Date</inlineHelpText>
        <label>Current Quarter Month 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_2__c</fullName>
        <label>Current Quarter Month 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Month_3__c</fullName>
        <label>Current Quarter Month 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Anticipated_Volume__c</fullName>
        <label>Monthly Anticipated Volume</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NCT_Trial_Link__c</fullName>
        <formula>Project__r.NCT_Trial_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NCT Trial Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Treatment__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Needs Treatment {N-of-1}</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>None</fullName>
                    <isActive>false</isActive>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Needs_IUO_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs IUO Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Amendment__c</fullName>
        <description>Hidden field used when adding amendments</description>
        <formula>SOW_Number__c + &quot; Amendment &quot;+ TEXT(Amendment_No__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Amendment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Batch_Text__c</fullName>
        <description>Adds leading zero to Next Batch field</description>
        <formula>IF (Next_Batch__c &gt;9,
TEXT(Next_Batch__c),
&apos;0&apos;+TEXT(Next_Batch__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Next Batch Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Batch__c</fullName>
        <defaultValue>(1)</defaultValue>
        <description>Hidden field used to increment batch number</description>
        <label>Next Batch</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notify_DL_LIMS_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This sends an email to DL-LIMS-Support with information regarding new project code</inlineHelpText>
        <label>Send Email to DL-LIMS-Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Patients__c</fullName>
        <label>Number of Patients</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Processed_to_Date__c</fullName>
        <formula>LIMS_Project_ID__r.Number_of_Samples__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of Samples for this Project ID (NOTE: Not all samples will be applied to this SOW)</inlineHelpText>
        <label>Number of Samples Received-Project ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Samples_Received_SOW__c</fullName>
        <inlineHelpText>Rollup field filled by DLRS</inlineHelpText>
        <label>Total # of Samples Received-SOW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Fees__c</fullName>
        <label>Other Fees</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Parent_SOW_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent SOW ID</label>
        <referenceTo>SOW__c</referenceTo>
        <relationshipLabel>Amendments</relationshipLabel>
        <relationshipName>Amendments_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Sponsor_Account__c</fullName>
        <description>Hidden field to allow for Project ID lookups</description>
        <formula>Sponsor_Account__r.Ultimate_Parent_Account__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Sponsor Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharma_Type__c</fullName>
        <label>SOW Subtype</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platform evaluation</fullName>
                </value>
                <value>
                    <fullName>Feasibility Study</fullName>
                </value>
                <value>
                    <fullName>Retrospective exploratory predictive biomarker</fullName>
                </value>
                <value>
                    <fullName>Retrospective exploratory biomarker discovery</fullName>
                </value>
                <value>
                    <fullName>Retrospective exploratory resistance monitoring</fullName>
                </value>
                <value>
                    <fullName>Retrospective tissue concordance</fullName>
                </value>
                <value>
                    <fullName>Retrospective ctDNA Velocity</fullName>
                </value>
                <value>
                    <fullName>CLIA ctDNA Velocity</fullName>
                </value>
                <value>
                    <fullName>CLIA on progression/resistance (Physician may act on patients who progress on drug)</fullName>
                    <label>CLIA on progression/resistance</label>
                </value>
                <value>
                    <fullName>TMB Development</fullName>
                </value>
                <value>
                    <fullName>MSI Development</fullName>
                </value>
                <value>
                    <fullName>Tissue QNS Rescue</fullName>
                </value>
                <value>
                    <fullName>Tissue Delay Rescue</fullName>
                </value>
                <value>
                    <fullName>Minimal residual disease</fullName>
                </value>
                <value>
                    <fullName>Prospective stratification</fullName>
                </value>
                <value>
                    <fullName>Prospective enrolling</fullName>
                </value>
                <value>
                    <fullName>Prospective pilot/tech evaluation</fullName>
                </value>
                <value>
                    <fullName>Investigator sponsored trial</fullName>
                </value>
                <value>
                    <fullName>Clinical trial assay</fullName>
                </value>
                <value>
                    <fullName>CDx Development</fullName>
                </value>
                <value>
                    <fullName>Referrals</fullName>
                </value>
                <value>
                    <fullName>Trial Consortium</fullName>
                </value>
                <value>
                    <fullName>Commercial consortium</fullName>
                </value>
                <value>
                    <fullName>Commercial pilot</fullName>
                </value>
                <value>
                    <fullName>Publication development</fullName>
                </value>
                <value>
                    <fullName>Research - Res Ops</fullName>
                </value>
                <value>
                    <fullName>Research - LUNAR</fullName>
                </value>
                <value>
                    <fullName>Enrollment - Clinical Trial Assay</fullName>
                </value>
                <value>
                    <fullName>Enrollment - Local Test</fullName>
                </value>
                <value>
                    <fullName>Stratification - CLIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_TAT__c</fullName>
        <formula>CASE(TEXT(Product_Name__c), &quot;G360&quot;, 45, &quot;G360CDX&quot;, 45,60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Planned TAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Price_Per_Sample__c</fullName>
        <label>Price Per Sample</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing__c</fullName>
        <label>Pricing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>G360</fullName>
                    <default>true</default>
                    <label>G360</label>
                </value>
                <value>
                    <fullName>G360CDx</fullName>
                </value>
                <value>
                    <fullName>Omni</fullName>
                    <label>OMNI</label>
                </value>
                <value>
                    <fullName>OMNICDx</fullName>
                </value>
                <value>
                    <fullName>LUNAR1</fullName>
                </value>
                <value>
                    <fullName>LUNAR1_CRC</fullName>
                </value>
                <value>
                    <fullName>LUNAR1_LUNG</fullName>
                </value>
                <value>
                    <fullName>LUNAR1_Other</fullName>
                </value>
                <value>
                    <fullName>LUNAR1_3</fullName>
                </value>
                <value>
                    <fullName>LUNAR-2</fullName>
                    <label>LUNAR2</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>